--- a/src/style.css
+++ b/src/style.css
@@ -8,20 +8,28 @@
 .header {
   background-color: rgb(179, 68, 87);
   color: white;
-  display: flex;
+  display: grid;
+  grid-template-columns: 10fr 1fr;
   justify-content: center;
   align-items: center;
   height: 4rem;
   width: 100%;
 }
+.header h1 {
+  justify-self: center;
+  text-align: center;
+  padding-left: 1.5rem;
+}
 .header button {
-  justify-self: end;
+  justify-self: flex-end;
+  justify-content: flex-end;
   outline: none;
   background-color: rgb(179, 68, 87);
   border: none;
 }
 .header svg {
   height: 1.5rem;
+  justify-self: end;
 }
 .header svg path {
   fill: white;
